fixed mobile overflow (for now)

--- a/projects/projects.css
+++ b/projects/projects.css
@@ -266,7 +266,7 @@ footer a {
         justify-content: space-evenly;
     }
     nav ul li {
-        margin: 0 0.5%;
+        margin: 0;
         font-size: calc(5px + 0.8vw);
     }
     nav ul li a {
